@@ -1,3 +1,2 @@
-require 'recaptcha.rb'
-ActionView::Base.send :include, Ambethia::ReCaptcha::Helper
-ActionController::Base.send :include, Ambethia::ReCaptcha::Controller
+require 'recaptcha'
+require 'recaptcha/rails'
